--- a/scss/foundation/_variable.scss
+++ b/scss/foundation/_variable.scss
@@ -9,7 +9,7 @@ $font-color--brown: #3C2A10;
 // 背景カラー
 $bgcolor--header: #FFF7EF;
 $bgcolor--footer: #9D8670;
-$bgcolor--sidebar: #F2EDE9; //線形グラデにする
+$bgcolor--sidebar: #F2EDE9;
 $bgcolor--card: #3C2B1C;
 
 /*
