--- a/scss/object/project/_food-menu.scss
+++ b/scss/object/project/_food-menu.scss
@@ -7,10 +7,10 @@
         margin-left: 19px;
     }
     &__line {
-        margin-bottom: 625px;
         margin-left: 26.5px;
     }
     &__ul {
+        height: 1082px; //** YATさん：高さではない
         color: v.$font-color--brown;
         display: flex;
         justify-content: center;
@@ -18,8 +18,17 @@
     }
     &__li {
         width: 40%;
-        background-color: aqua;
+        // ここでは background-size: cover にしないようにしたい
+        background-position: top center;
+        background-repeat: no-repeat;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        &:first-child {
+            background-image: url(../../../img/takeout-pc.jpg);
+        }
         &:nth-child(2) {
+            background-image: url(../../../img/eatin-pc.jpg);
             margin-left: 80px;
         }
     }
@@ -31,8 +40,6 @@
     &__dt {
         font-family: v.$font-Mplus-Bold;
         font-size: 24px;
-        // margin-top: 17px;
-        // margin-left: 19px;
         margin-bottom: 26px;
     }
     &__dd {
