--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,7 +4,7 @@
    Foundation
    ========================================================================== */
 
-@use "foundation/variable" as v;
+@use "foundation/variable";
 @use "foundation/base";
 
 /* ==========================================================================
