--- a/scss/object/project/_access.scss
+++ b/scss/object/project/_access.scss
@@ -15,18 +15,24 @@
    }
    &__wrapper {
       width: 73%;
-      padding-top: 83px;
-      padding-bottom: 40px;
+      padding-top: 65px;
+      padding-bottom: 52.5px;
       margin-left: (100% - 73%) * 0.47;
    }
+   &__title {
+      font-size: 28px;
+   }
    &__line {
+      width: 60px;
       border-width: 2px;
       padding-bottom: 0;
-      margin-top: 55.5px;
-      margin-bottom: 63.5px;
+      margin-top: 43.5px;
+      margin-bottom: 49.8px;
    }
    &__text {
       font-family: v.$font-Mplus-j-Bold;
       color: v.$font-color--white;
+      font-size: 12.5px;
+      line-height: 2.06;
    }
 }
