--- a/scss/object/project/_header.scss
+++ b/scss/object/project/_header.scss
@@ -1,13 +1,14 @@
 @use "../../foundation/variable" as v;
 
 .p-header {
+    width: 100%;
     background-color: v.$bgcolor--header;
     color: v.$font-color--gray;
     display: flex;
     justify-content: space-between;
     align-items: center;
     &__logo {
-        font-size: 64px;
-        margin-left: 65px;
+        font-size: 50px;
+        margin-left: 4.18%;
     }
 }
