--- a/scss/object/project/_sidebar.scss
+++ b/scss/object/project/_sidebar.scss
@@ -1,22 +1,33 @@
 @use "../../foundation/variable" as v;
 
 .p-sidebar {
+    width: 100%;
     background-color: v.$bgcolor--sidebar;
     color: v.$font-color--gray;
-    padding-top: 82px;
-    padding-left: 46px;
+    // padding-top: 60px;
+    padding-left: 12.5%;
     &__logo {
-        margin-bottom: 85px;
-        font-size: 34px;
+        margin-top: 63px;
+        margin-bottom: 63px;
+        font-size: 26.6px;
     }
     &__li {
-        padding-top: 40px;
-        padding-bottom: 40px;
-        font-size: 24px;
+        padding-top: 27px;
+        padding-bottom: 27px;
+        font-size: 18.8px;
+        &:first-child {
+            padding-top: 0;
+        }
     }
     &__sub-li {
-        padding-left: 20px;
-        padding-bottom: 23px;
-        font-size: 20px;
+        padding-left: 7%;
+        padding-bottom: 16.6px;
+        font-size: 15.7px;
+        &:last-child {
+            padding-bottom: 6.6px;
+        }
+    }
+    a {
+        color: v.$font-color--gray;
     }
 }
