--- a/scss/object/project/_mainvisual.scss
+++ b/scss/object/project/_mainvisual.scss
@@ -1,7 +1,7 @@
 .p-mainvisual {
     height: 415px;
     width: 100%;
-    background-image: url(../../../img/mainvisual-pc2.jpg);
+    background-image: url(../../../img/mainvisual-pc.jpg);
     // background-position: center;
     display: flex;
     align-items: center;
