--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@
 
 @use "foundation/variable";
 @use "foundation/base";
+@use "foundation/mixin";
 
 /* ==========================================================================
    Layout
