--- a/scss/object/project/_food-menu.scss
+++ b/scss/object/project/_food-menu.scss
@@ -1,4 +1,5 @@
 @use "../../foundation/variable" as v;
+@use "../../foundation/mixin" as m;
 
 .p-food-menu {
     width: 100%;
@@ -11,11 +12,16 @@
         margin-left: 3.5%;
     }
     &__ul {
-        min-height: 1000px;
+        min-height: 642px; //*****考える
         color: v.$font-color--brown;
         display: flex;
         justify-content: center;
         margin: 94px auto 105px;
+        @include m.mq( sp ) {
+            flex-direction: column;
+            align-items: center;
+            margin: 20px 0;
+        }
     }
     &__li {
         width: 40%;
@@ -25,12 +31,19 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        @include m.mq( sp ) {
+            width: 89%;
+        }
         &:first-child {
             background-image: url(../../../img/takeout-pc.jpg);
         }
         &:nth-child(2) {
             background-image: url(../../../img/eatin-pc.jpg);
             margin-left: 5.15%;
+            @include m.mq( sp ) {
+                margin-left: 0;
+                margin-top: 20px;
+            }
         }
     }
     &__dl {
