--- a/css/style.css
+++ b/css/style.css
@@ -260,6 +260,11 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
           justify-content: center;
   margin: 94px auto 105px;
 }
+@media (max-width: 834px) {
+  .p-food-menu__ul {
+    margin: 4.8% 0;
+  }
+}
 @media (max-width: 640px) {
   .p-food-menu__ul {
     -webkit-box-orient: vertical;
@@ -269,7 +274,7 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    margin: 20px 0;
+    margin: 5.3% 0;
   }
 }
 .p-food-menu__li {
@@ -287,6 +292,11 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
+@media (max-width: 834px) {
+  .p-food-menu__li {
+    width: 43%;
+  }
+}
 @media (max-width: 640px) {
   .p-food-menu__li {
     width: 89%;
@@ -298,6 +308,11 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
 .p-food-menu__li:nth-child(2) {
   background-image: url(../../../img/eatin-pc.jpg);
   margin-left: 5.15%;
+}
+@media (max-width: 834px) {
+  .p-food-menu__li:nth-child(2) {
+    margin-left: 4.8%;
+  }
 }
 @media (max-width: 640px) {
   .p-food-menu__li:nth-child(2) {
@@ -325,19 +340,38 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
   background-position: 0 50%;
 }
 .p-access__map-layer {
-  height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
+}
+@media (max-width: 640px) {
+  .p-access__map-layer {
+    position: relative;
+  }
 }
 .p-access__bg-layer {
   width: 60%;
-  height: 100%;
   background-color: rgba(0, 0, 0, 0.29);
+}
+@media (max-width: 834px) {
+  .p-access__bg-layer {
+    width: 100%;
+  }
+}
+@media (max-width: 640px) {
+  .p-access__bg-layer {
+    background-color: rgba(0, 0, 0, 0);
+  }
 }
 .p-access__wrapper {
   width: 73%;
   padding-top: 65px;
   padding-bottom: 52.5px;
   margin-left: 12.69%;
+}
+@media (max-width: 640px) {
+  .p-access__wrapper {
+    position: relative;
+    z-index: 100;
+  }
 }
 .p-access__title {
   font-size: 28px;
@@ -354,6 +388,16 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
   color: #fff;
   font-size: 12.5px;
   line-height: 2.06;
+}
+@media (max-width: 640px) {
+  .p-access__bg-layer2 {
+    background-color: rgba(0, 0, 0, 0.29);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60%;
+  }
 }
 
 /* ==========================================================================
