--- a/scss/object/project/_food-menu.scss
+++ b/scss/object/project/_food-menu.scss
@@ -17,10 +17,13 @@
         display: flex;
         justify-content: center;
         margin: 94px auto 105px;
+        @include m.mq( tablet ) {
+            margin: 4.8% 0;
+        }
         @include m.mq( sp ) {
             flex-direction: column;
             align-items: center;
-            margin: 20px 0;
+            margin: 5.3% 0;
         }
     }
     &__li {
@@ -31,6 +34,9 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        @include m.mq( tablet ) {
+            width: 43%;
+        }
         @include m.mq( sp ) {
             width: 89%;
         }
@@ -40,6 +46,9 @@
         &:nth-child(2) {
             background-image: url(../../../img/eatin-pc.jpg);
             margin-left: 5.15%;
+            @include m.mq( tablet ) {
+                margin-left: 4.8%;
+            }
             @include m.mq( sp ) {
                 margin-left: 0;
                 margin-top: 20px;
